--- a/index.ipynb
+++ b/index.ipynb
@@ -1036,8 +1036,9 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    \n",
-    "    \n",
+    "    {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
+    "                 'marker': {'color': 'blue'},\n",
+    "                 'name': 'Our nice line'}\n",
     "    pass"
    ]
   },
