--- a/index.ipynb
+++ b/index.ipynb
@@ -1036,9 +1036,11 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "    return {'x': [1.5, 2.5, 3.5, 4.5], 'y': [3, 5, 7, 9], \n",
-    "                 'marker': {'color': 'blue'},\n",
-    "                 'name': 'Our nice line'}\n",
+    "    trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
+    "\n",
+    "plotly.offline.iplot([\n",
+    "    trace\n",
+    "])\n",
     "    pass"
    ]
   },
