--- a/index.ipynb
+++ b/index.ipynb
@@ -1039,8 +1039,7 @@
     "    trace = {'x': [1, 2, 3, 4], 'y': [1, 2, 3, 4], 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
     "\n",
     "plotly.offline.iplot([\n",
-    "    trace\n",
-    "])\n",
+    "    trace])\n",
     "    pass"
    ]
   },
