--- a/index.ipynb
+++ b/index.ipynb
@@ -1036,7 +1036,7 @@
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "   return {d, 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
+    "   return {data, 'mode': 'markers', 'marker': {'color': 'rgba(255, 182, 193, .9)'}}\n",
     "    pass"
    ]
   },
