--- a/index.ipynb
+++ b/index.ipynb
@@ -1037,6 +1037,8 @@
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "   return {data, mode , name}\n",
+    "sample_figure = {'data': [sample_trace, other_sample_trace], 'layout': {'title': 'Our sample plot'}}\n",
+    "plot(sample_figure)\n",
     "pass"
    ]
   },
