Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1037,7 +1037,7 @@
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "   return {data, mode , name}\n",
-    "sample_figure = {data, mode 'layout': {'title': 'Our sample plot'}}\n",
+    "sample_figure = {data,  'layout': {'title': 'Our sample plot'}}\n",
     "plot(sample_figure)\n",
     "pass"
    ]
