--- a/index.ipynb
+++ b/index.ipynb
@@ -1037,7 +1037,7 @@
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
     "   return {data, mode , name}\n",
-    "return {data, 'mode' = mode, 'name' = name\n",
+    "return {data, 'mode' = mode, 'name' = name}\n",
     "plot(sample_figure)\n",
     "pass"
    ]
