--- a/index.ipynb
+++ b/index.ipynb
@@ -1031,14 +1031,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-8-4b2173e1c027>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-8-4b2173e1c027>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return {data, 'mode' = mode, 'name' = name}\u001b[0m\n\u001b[0m                         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "  \n",
-    "return {data, 'mode' = mode, 'name' = name}\n",
-    ")\n",
+    "  return {data, 'mode' = mode, 'name' = name}\n",
     "pass"
    ]
   },
