Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1045,7 +1045,7 @@
    ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "  return {data, 'mode': = mode, 'name': = name}\n",
+    "  return {data, 'mode': mode, 'name': name}\n",
     "pass"
    ]
   },
