--- a/index.ipynb
+++ b/index.ipynb
@@ -1031,21 +1031,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-12-c8a2bd7e4582>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-13-f45848f6197a>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-12-c8a2bd7e4582>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return [data, 'mode': mode, 'name': name\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-13-f45848f6197a>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    return dict{data, 'mode': mode, 'name': name}\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "  return dict[data, 'mode': mode, 'name': name\n",
+    "  return dict{data, 'mode': mode, 'name': name}\n",
     "pass"
    ]
   },
