Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1031,12 +1031,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "def build_trace(data, mode = 'markers', name = 'data'):\n",
-    "  return dict[data, 'mode': mode, 'name': name]\n",
+    "  return list[data, 'mode': mode, 'name': name]\n",
     "pass"
    ]
   },
