Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -1163,7 +1163,7 @@
     "\n",
     "trace0 = build_trace(data, 'markers')\n",
     "trace1 = build_trace(data, 'lines', 'my_trace')\n",
-    "trace2 = build_trace(data, 'scatter', 'ex_trace')\n",
+    "trace2 = build_trace(data, 'dots', 'ex_trace')\n",
     "plot({'data':[trace0, trace1,trace2]})"
    ]
   },
