Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2059,6 +2059,8 @@
    "outputs": [],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
+    "    x_values = list(map(lambda datapoint: datapoint['x'], data))\n",
+    "    y_values = list(map(lambda datapoint: datapoint['y'], data))\n",
     "     pass"
    ]
   },
@@ -2069,6 +2071,7 @@
    "outputs": [],
    "source": [
     "trace_values([1, 2, 3], [2, 4, 5])\n",
+    "\n",
     "\n",
     "# {'x': [1, 2, 3], 'y': [2, 4, 5], 'mode': 'markers', 'name': 'data'}"
    ]
