--- a/index.ipynb
+++ b/index.ipynb
@@ -2054,13 +2054,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-26-82e0a9759259>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-26-82e0a9759259>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    pass\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "def trace_values(x_values, y_values, mode = 'markers', name=\"data\"):\n",
     "   return {'x': x_values, 'y': y_values, 'mode': mode, 'name': name}\n",
-    "     pass"
+    "pass"
    ]
   },
   {
